// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LegendItem renders correctly 1`] = `
<span
  data-testid="spotlight-legend-item"
>
  <style
    jsx={true}
  >
    
      span {
        background-color: inherit;
        color: inherit;
      }
    
  </style>
</span>
`;

exports[`LegendItem renders with the specified children 1`] = `
<span
  data-testid="spotlight-legend-item"
>
  <span>
    30%
  </span>
  <style>
    
      span {
        background-color: inherit;
        color: inherit;
      }
    
  </style>
</span>
`;
